--- a/index.html
+++ b/index.html
@@ -13,14 +13,42 @@
       h2 {
         text-align: center;
       }
+      .comment {
+        width: 20%;
+        display:inline-block;
+      }
     </style>
   </head>
 
   <body>
+    <audio controls loop>
+      <source src="hbd.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+    </audio>
     <h1>&#127804 HAPPY 22ND BDAY TO DAISY 유림 KIM &#127804</h1>
     <img src="daisy_bg2.png" alt="daisy background" />
     <div>
-      <h2>MUCH LOVEEE for daisy</h2>
+      <h2>Some LOVEEE for daisy</h2>
+    </div>
+    <div class="comment">
+      <h4>Melinda Yang</h4>
+      Happy birthday Daisy!!! 
+      I miss u and I hope ur having fun in North
+      Carolina!! Hoping to see u soon, maybe in Atl?? Or Seattle?? 
+      WHEREVER IT IS IT'LL BE A BLAST 🥺 I hope u have the best day today love u!!! 😚😚
+    </div>
+    <div class="comment">
+      <h4>Melinda Chhu</h4>
+      HI DAISY !! I hope you’re having the best time in NC , happy t swift year 🤩💙 love you lots 
+    </div>
+    <div class="comment">
+      <h4>Shengkai Xu</h4>
+      Happy birthday Daisy! I hope you are having fun in UNC and not doing coding/CS! We should do a building block reunion soon!🎂
+    </div>
+    <div class="comment">
+      <h4>Drew Colman</h4>
+      Happy 22nd Birthday Daisyyyy 🥳🥳 I know we don’t talk all the time but I’m so grateful for the effort you put into our friendship 💖 I always love catching up with you and hope that we can finally reunite in person soon 🥺 Have a great time celebrating this special day and take an extra shot for me 🥰 love u sm ❤️❤️
+  
     </div>
   </body>
 </html>
