--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
         text-align: center;
       }
       .comment {
-        width: 20%;
+        width: 250px;
+        max-width: 250px;
         display:inline-block;
+        vertical-align: top;
+        margin-right: 20px;
+      }
+      .audioCont {
+        display: flex;
+    justify-content: center;
+    align-items: center;
       }
     </style>
   </head>
 
   <body>
-    <audio controls loop>
-      <source src="hbd.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-    </audio>
+    <div class="audioCont">
+      <audio controls loop>
+        <source src="hbd.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+      </audio>
+    </div>
     <h1>&#127804 HAPPY 22ND BDAY TO DAISY 유림 KIM &#127804</h1>
     <img src="daisy_bg2.png" alt="daisy background" />
     <div>
@@ -48,7 +58,34 @@
     <div class="comment">
       <h4>Drew Colman</h4>
       Happy 22nd Birthday Daisyyyy 🥳🥳 I know we don’t talk all the time but I’m so grateful for the effort you put into our friendship 💖 I always love catching up with you and hope that we can finally reunite in person soon 🥺 Have a great time celebrating this special day and take an extra shot for me 🥰 love u sm ❤️❤️
-  
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
+    </div>
+    <div class="comment">
+      <h4>placeholder</h4>
+      lalalla
     </div>
   </body>
 </html>
