--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
     <img src="daisy_bg2.png" alt="daisy background" />
     <h2>DISCLAIMER</h2>
     <div class="disclaimer">
-      <video width="320" height="240" controls>
-        <source src="IMG_4385.MOV" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
+      <div class="embed-container">
+        <iframe
+            src="https://www.youtube.com/embed/XXRTsa2UX3Y"
+            width="320"
+            height="240"
+            frameborder="0"
+            allowfullscreen="">
+        </iframe>
+      </div>
     </div>
     <br/>
 
@@ -76,10 +81,15 @@
     </div>
     <div class="comment">
       <h4>Sophie Kaplan</h4>
-      <video width="320" height="240" controls>
-        <source src="sophie_vid.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
+      <div class="embed-container">
+        <iframe
+            src="https://www.youtube.com/embed/RJWGGObC7Xc"
+            width="320"
+            height="240"
+            frameborder="0"
+            allowfullscreen="">
+        </iframe>
+      </div>
       </div>
     <div class="comment">
       <h4>Zoe Ouyang</h4>
@@ -174,10 +184,19 @@ Love you so much!
     </div>
     <div class="comment">
     <h4>Joy Cheng</h4>
-    <video width="320" height="240" controls>
+    <!-- <video width="320" height="240" controls>
       <source src="joy_vid.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video>
+    Your browser does not support the video tag. RJWGGObC7Xc
+    </video> -->
+    <div class="embed-container">
+      <iframe
+          src="https://www.youtube.com/embed/HD0gd-iginA"
+          width="320"
+          height="240"
+          frameborder="0"
+          allowfullscreen="">
+      </iframe>
+    </div>
   </div>
   <div class="comment">
     <h4>Stella Yun</h4>
