--- a/index.html
+++ b/index.html
@@ -225,5 +225,6 @@ Randy Truong
   <h4>Arshia Singhal</h4>
   HAPPY BIRTHDAY DAISYYY I hope you have the best year and time at UNC!! I miss hanging out let me know if you’re ever in Houston :)
 </div>
+<h1>Daisy you are so so loved and we all miss you immensely 🥺❤️</h1>
   </body>
 </html>
